chore: Add next lint

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "scripts": {
     "dev": "next",
-    "static": "next build && next export"
+    "static": "next build && next export",
+    "lint": "next lint"
+  },
+  "devDependencies": {
+    "eslint": "<8.0.0",
+    "eslint-config-next": "12.0.4"
   }
 }
