--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: sikalabs/ci
 stages:
   - lint
   - build
+  - deploy dev
 
 variables:
   IMAGE: $CI_REGISTRY_IMAGE/app:$CI_COMMIT_REF_SLUG-$CI_COMMIT_SHORT_SHA-$CI_PIPELINE_ID
@@ -22,3 +23,17 @@ build:
     - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
     - docker build -t $IMAGE .
     - docker push $IMAGE
+
+deploy dev:
+  stage: deploy dev
+  script:
+    - helm repo add sikalabs https://helm.oxs.cz
+    - helm upgrade --install proj-$CI_PROJECT_ID-$CI_COMMIT_REF_SLUG
+      sikalabs/one-image
+      --set image=$IMAGE
+      --set host=$CI_PROJECT_PATH_SLUG-$CI_COMMIT_REF_SLUG.$KUBE_INGRESS_BASE_DOMAIN
+  environment:
+    name: dev/$CI_COMMIT_REF_SLUG
+    url: https://$CI_PROJECT_PATH_SLUG-$CI_COMMIT_REF_SLUG.$KUBE_INGRESS_BASE_DOMAIN
+    kubernetes:
+      namespace: default
